[project]
name = "langchain_cookbook"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Achilleas Voutsas", email = "achilleas.voutsas@ema.europa.eu"},
]
dependencies = [
    "langchain>=0.1.9",
    "tiktoken>=0.6.0",
    "langchain-openai>=0.0.7",
    "chromadb>=0.4.23",
    "pandas>=2.2.1",
    "openai>=1.12.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "wheel>=0.42.0",
    "ipykernel>=6.29.2",
    "mypy>=1.8.0",
]
